#Nmap Changelog ($Id$); -*-text-*-

o [NSE] bin.lua is officially deprecated. Lua 5.3, added 2 years ago in Nmap
  7.25BETA2, has native support for binary data packing via string.pack and
  string.unpack. All existing scripts and libraries have been updated.
  [Daniel Miller]

o [NSE] tls.lua when creating a client_hello message will now only use a SSLv3
  record layer if the protocol version is SSLv3. Some TLS implementations will
  not handshake with a client offering less than TLSv1.0. Scripts will have to
  manually fall back to SSLv3 to talk to SSLv3-only servers. [Daniel Miller]

o [NSE][GH#1322] Fix a few false-positive conditions in ssl-ccs-injection. TLS
  implementations that responded with fatal alerts other than "unexpected
  message" had been falsely marked as vulnerable. [Daniel Miller]

o Emergency fix to Nmap's birthday announcement so Nmap wishes itself
  a "Happy 21st Birthday" rather than "Happy 21th" in verbose mode
  (-v) on September 1, 2018. [Daniel Miller]

o [NSE] New knx.lua library holds common functions and definitions for
  communicating with KNX/Konnex devices. [Daniel Miller]

o [NSE] Completely removed the bit.lua NSE library. All of its functions are
  replaced by native Lua bitwise operations, except for `arshift` (arithmetic
  shift) which has been moved to the bits.lua library. [Daniel Miller]

o [GH#1291][GH#34][GH#1339] Use pcap_create instead of pcap_live_open in Nmap,
  and set immediate mode on the pcap descriptor. This solves packet loss
  problems on Linux and may improve performance on other platforms.
  [Daniel Cater, Mike Pontillo, Daniel Miller]

o [GH#1150] Start host timeout clocks when the first probe is sent to a host,
  not when the hostgroup is started. Sometimes a host doesn't get probes until
  late in the hostgroup, increasing the chance it will time out. [jsiembida]

o [GH#1147][GH#1108] Reduced LibPCRE resource limits so that version detection